webroot/setting/introspect/ui/css/contrail.introspect.css
a.introspect-link {
    color: #3182BD;
}
.contrail-introspect-grid {
    width: 100%;
}
.contrail-introspect-grid .grid-body{
    width: 100%;
    overflow: scroll;
}
.contrail-introspect-grid table {
    width: 100%;
}
.contrail-introspect-grid table thead {
    border-top: 1px solid #CCCCCC;
    border-bottom: 1px solid #DADADA;
}
.contrail-introspect-grid table thead tr th {
    font-weight: normal;
    font-size: 13px;
    color: #3182BD;
    padding: 4px;
    min-height: 18px;
    line-height: 18px;
    text-align: left;
    min-width: 200px;
}
.contrail-introspect-grid table tbody tr {
    width: 100%;
}
.contrail-introspect-grid table tbody tr:nth-child(even) {
    background-color: #F5F5F5;

}
.contrail-introspect-grid table tbody tr td {
    vertical-align: top;
    border: none;
    color: #393939;
    font-size: 13px;
    padding: 5px;
}
.contrail-introspect-grid table tbody tr td .td-cell{
    padding: 5px;
    white-space: normal;
}

.contrail-introspect-grid table.table_3,
.contrail-introspect-grid table.table_5,
.contrail-introspect-grid table.table_7,
.contrail-introspect-grid table.table_9 {
    background-color: #FFFFFF;
    border-bottom: 1px solid #DADADA;
}
.contrail-introspect-grid table.table_3 > thead,
.contrail-introspect-grid table.table_5 > thead,
.contrail-introspect-grid table.table_7 > thead,
.contrail-introspect-grid table.table_9 > thead {
    border-left: 1px solid #DADADA;
    border-top: 1px solid #DADADA;
}
.contrail-introspect-grid table.table_3 > thead > tr > th,
.contrail-introspect-grid table.table_5 > thead > tr > th,
.contrail-introspect-grid table.table_7 > thead > tr > th,
.contrail-introspect-grid table.table_9 > thead > tr > th {
    border-right: 1px solid #DADADA;
}
.contrail-introspect-grid table.table_3 > tbody > tr,
.contrail-introspect-grid table.table_5 > tbody > tr,
.contrail-introspect-grid table.table_7 > tbody > tr,
.contrail-introspect-grid table.table_9 > tbody > tr {
    border-left: 1px solid #DADADA;
    border-top: 1px solid #DADADA;
}
.contrail-introspect-grid table.table_3 > tbody > tr:last-child,
.contrail-introspect-grid table.table_5 > tbody > tr:last-child,
.contrail-introspect-grid table.table_7 > tbody > tr:last-child,
.contrail-introspect-grid table.table_9 > tbody > tr:last-child {
    border-bottom: 1px solid #DADADA;
}
.contrail-introspect-grid table.table_3 > tbody > tr > td,
.contrail-introspect-grid table.table_5 > tbody > tr > td,
.contrail-introspect-grid table.table_7 > tbody > tr > td,
.contrail-introspect-grid table.table_9 > tbody > tr > td {
    border-right: 1px solid #DADADA;
}

/*
 * Copyright (c) 2013 Juniper Networks, Inc. All rights reserved.
 */

pre {
    white-space: pre;
    min-width: 150px;
    padding: 3px;
    margin: 0 0 3px;
}

.first-cap {
    text-transform:capitalize;
}

.table th {
    padding-right: 20px;
}

.dt-margin-10 {
    margin-left: 10px;
}

.table {
    width: auto;
}

pre{
    font-size: 12px;
    border-width: 0;
    min-width: 125px;
}
h4{
    font-size: 14px;
    margin: 5px;
}
.accordion-heading .accordion-toggle {
    display: block;
    padding: 2px;
}
.accordion-inner {
    padding: 2px;
    border-top: 0;
}
table{
    border-color: #eee !important;
}

.fileinput-button {
    position: relative;
    overflow: hidden;
    display: inline-block;
    line-height: 20px;
    padding-bottom: 0;
}
.fileinput-button input {
    position: absolute;
    top: 0;
    right: 0;
    margin: 0;
    opacity: 0;
    -ms-filter: 'alpha(opacity=0)';
    font-size: 200px !important;
    direction: ltr;
    cursor: pointer;
}

#next-batch-link {
    position: absolute;
    right: 0;
    top: 7px;
    font-weight: normal;
}
#next-batch-link a {
    font-size: 11px;
    color: #777777;
    font-weight: normal;
}
#next-batch-link a:hover {
    color: #3182BD;
}

/* Fixes for IE < 8 */
@media screen\9 {
    .fileinput-button input {
        filter: alpha(opacity=0);
        font-size: 100%;
        height: 100%;
    }
}

